deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-service
  template:
    metadata:
      labels:
        app: devops-service
    spec:
      containers:
      - name: devops-service
        image: image-registry.openshift-image-registry.svc:5000/devops-apps/devops-service:1.0.0
        ports:
        - containerPort: 8080
